$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Versin 1.18-14 (opened October 15, 2010)

	* wcmdscale: give two goodness of fit statistics for 'k' axes: one
	is for the real part and based on the sum of positive eigenvalues,
	and second is for all axes and based for the sum of absolute
	values of all eigenvalues.

	* summary.eigenvals: handle now possible negative eigenvalues from
	capscale() or wcmdscale(): cumulative sum and proportions are now
	based on the sum of absolute values of eigenvalues, and all real
	eigenvalues explain less than 100% if there are negative
	eigenvalues.

Version 1.18-13 (closed October 15, 2010)

	* anova.cca(..., by = "axis"): now really uses marginal tests for
	every axis. Significance of axis k with LC scores lc is from model
	update(object, . ~ lc[,k] + Condition(lc[,-k])). That is, That is,
	axis k is used as constraint and all other axes as conditions,
	when axis k is analysed. This also solves the failure of
	anova(..., by = "ax") of rda(dune ~ poly(pH, 2) + Baresoil,
	varechem) of PR#945, but no other problems of the same report.

	* treedive: handles trivial cases of zero (diversity NA) or one
	species (diversity 0). 

	* oecosimu: handles NA values as na.rm = TRUE in simulations for
	cases where these are produced by the function to evaluate
	statistics.

	* oecosimu: takes care that the statistic is evaluated with binary
	data when null models are binary. This was a one-year old bug
	introduced in rev 967 on Aug 31, 2009. Previous time this bug was
	corrected in rev 438 on June 28, 2008.

	* nestednodf: Gustavo Carvalho sent a new upgraded version which
	also implements a new quantitative method of Almeida-Neto & Ulrich
	(Env Mod Software, in press; 2010). Based on feature request #1097
	in R-Forge. 

	* ordistep: name clash if the fitted model contained item or term
	called 'mod'. Reported by Richard Telford (Bergen, Norway).

	* fitspecaccum: Stephen Sefick suggested adding Michaelis-Menten